# Brotology-field-guide

./: .gitattributes  .gitignore  ATRAI_MISSION_AND_PRIMITIVES_REPORT_2026-04-29.md  BROTOLOGISTS_LOG.md  CHAMPION_COUNCIL_BROTOLOGY_CONTINUITY_LINK_FIELD_REPORT_2026-05-04.md  CONVERGENCE_PANTHEON_CONTROL_ANNALS_2026-04-30.md  FIELD_LOG_INDEX.md  FIELD_OPERATIONS_MANUAL.md  GUIDE.md  HANDO_SOUNDTRACK_GITHUB_FREE_LANE_2026-05-04.md  LICENSE  MANIFEST.in  OPERATIONAL_SURFACE.md  RAY_VARIABLE_REGISTRY_AND_PI_BAG_AUDIO_EMOTES_2026-05-04.md  README.md  ROTATION_SNAKE_TRANSITION_DESIGN_2026-04-28.md  SHUTTER_ADRENALINE_NAME_REHABILITATION_2026-04-29.md  Unified AI Tool Prompt - Senzu Bean.txt  VISUAL_SYSTEMS_DIAGNOSTICS.md  WHEAT_FARM_CONTINUITY_IDEATION_REPORT_2026-05-04.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
external_media/kongdum_playlist/: README.md
src/brotology_field_guide/: __init__.py  canon.py  cli.py  core.py  prompts.py  resources.py  rules.py
